# ICT397-Labs

./: .gitignore  README.md  glad.c
Lab 03/Lab03/: Lab03.sln
Lab 03/Lab03/Lab03/: Lab03.cpp  Lab03.vcxproj  Lab03.vcxproj.filters  lab03.lua  script2.lua  task4.lua  task5.lua
Lab 03/Lua Tests/: test.lua
Lab07/: CMakeLists.txt  ICT397-Lab7-Bryce-Standley-33046367.docx  Lab07.sln  Lab07.vcxproj  Lab07.vcxproj.filters
Lab07/FindPackages/: FindAssimp.cmake  FindGLAD.cmake  FindGLFW.cmake
Lab07/res/Shaders/: cFrag.glsl  cVert.glsl  mFrag.glsl  mVert.glsl  skybox_vert.glsl  tFrag.glsl
Lab07/src/: AppWindow.cpp  AppWindow.h  BruteForce.cpp  BruteForce.h  CMD2Model.cpp  CMD2Model.h  CMakeLists.txt  Callbacks.cpp  Callbacks.h  Camera.h  GL.h  Input.cpp  Input.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Shader.cpp  Shader.h  Skybox.cpp  Skybox.h  Terrain.cpp  Terrain.h  Texture.cpp  Texture.h  VertexBuffer.cpp  VertexBuffer.h  Window.cpp  Window.h  application.cpp  glad.c
Lab07/vender/assimp/5.0.1/include/assimp/: irrXMLWrapper.h
Lab07/vender/glad/include/glad/: glad.h
Lab07/vender/glfw/: glfw3.lib
Lab07/vender/glm/0.9.9.8/: INSTALL_RECEIPT.json
Lab07/vender/glm/0.9.9.8/share/man/html/: jquery.js
lab04-terrain/: practice.sln
lab04-terrain/practice/: Source.cpp  Terrain.cpp  Terrain.h  glad.c  lfshader.txt  practice.vcxproj  practice.vcxproj.filters
